--- a/ThreeP/Modules/Common/Crud/Components/Update.razor
+++ b/ThreeP/Modules/Common/Crud/Components/Update.razor
@@ -5,9 +5,11 @@
 <MBox Name="Dodaj/Edytuj" Expanded="expanded" ExpandedDisabled="true" StickyTop StickyOffsetTop="64px"
       OnDoubleClick="@Add">
     <HeaderRight>
-        <MudButton Disabled="updateDisabled" Color="Color.Warning" Variant="Variant.Outlined" Size="Size.Medium"
+        @* ADD BUTTON *@
+        <MudButton Disabled="updateDisabled" Variant="Variant.Outlined" Color="Color.Warning" Size="Size.Medium"
                    OnClick="Add">Dodaj
         </MudButton>
+        
     </HeaderRight>
     <ChildContent>
 
